# meshtastic-connect

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  build.cmd  build.rs  build.sh
.cargo/: config.toml
.github/workflows/: gh-pages-from-main.yml
meshtastic-monitor/: Cargo.toml
meshtastic-monitor/src/: main.rs  meshtastic_print.rs
meshtastic-softnode/: Cargo.toml
meshtastic-softnode/src/: config.rs  connection.rs  main.rs  publish.rs  router.rs  sqlite.rs  web.rs
softnode-client/: Cargo.toml  build.rs  index.html
softnode-client/src/: main.rs
softnode-client/src/app/: byte_node_id.rs  color_generator.rs  data.rs  fix_gnss.rs  journal.rs  map.rs  mod.rs  node_book.rs  node_dump.rs  node_filter.rs  radio_center.rs  radio_telemetry.rs  roster.rs  settings.rs  telemetry.rs  telemetry_formatter.rs  time_format.rs
src/: lib.rs  main.rs  meshtastic.rs  meshtastic_display.rs  meshtastic_print.rs
src/keyring/: channel.rs  key.rs  mod.rs  node_id.rs  peer.rs
src/keyring/cryptor/: mod.rs  pki.rs  symmetric.rs
src/keyring/decryptor/: mod.rs  pki.rs  symmetric.rs
src/transport/: mod.rs  mqtt.rs  mqtt_stream.rs  multicast.rs  stream.rs  udp.rs
src/transport/stream/: codec.rs  mod.rs  serial.rs  tcp.rs
