[package]
name = "meshtastic-connect"
version = "0.1.0"
edition = "2024"

[build-dependencies]
micropb-gen = "0.3.0"
prost-build = "0.14.1"

[dependencies]
aes = "0.8.4"
base64 = "0.22.1"
bytes = "1.10.1"
ccm = "0.5.0"
chrono = { version = "0.4.42", features = ["clock"] }
clap = { version = "4.5.47", features = ["derive"] }
ctr = "0.9.2"
duration-string = { version = "0.5.3", features = ["serde"] }
futures = "0.3.31"
getifaddrs = "0.5.0"
libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }
mdns-sd = "0.15.1"
parking_lot = "0.12.4"
prost = "0.14.1"
rand = "0.9.2"
rumqttc = "0.25.0"
rusqlite = "0.37.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml_ng = "0.10.0"
sha2 = "0.10.9"
socket2 = "0.6.0"
tokio = { version = "1.47.1", features = [
    "rt-multi-thread",
    "sync",
    "io-util",
    "io-std",
] }
tokio-serial = { version = "5.4.5", features = ["bytes"] }
tokio-stream = { version = "0.1.17", features = [] }
tokio-util = { version = "0.7.16", features = ["codec"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
zerocopy = { version = "0.8.27", features = ["derive"] }
