[workspace]
members = ["meshtastic-monitor", "meshtastic-softnode"]


[package]
name = "meshtastic-connect"
version = "0.1.0"
edition = "2024"

[build-dependencies]
micropb-gen = "0.3.0"
prost-build = "0.14.1"

[dependencies]
aes = "0.8.4"
base64 = "0.22.1"
bytes = "1.10.1"
ccm = "0.5.0"
chrono = "0.4.42"
ctr = "0.9.2"
futures = "0.3.31"
getifaddrs = "0.5.0"
prost = "0.14.1"
rand = "0.9.2"
rumqttc = "0.25.0"
serde = { version = "1.0.227", features = ["derive"] }
sha2 = "0.10.9"
socket2 = "0.6.0"
tokio = { version = "1.47.1", features = [
    "rt-multi-thread",
    "sync",
    "io-util",
    "io-std",
] }
tokio-serial = { version = "5.4.5", features = ["bytes"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.16", features = ["codec"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
zerocopy = { version = "0.8.27", features = ["derive"] }
