[workspace]
members = ["meshtastic-monitor", "meshtastic-softnode", "softnode-client"]

[package]
name = "meshtastic-connect"
version = "0.1.0"
edition = "2024"

[build-dependencies]
micropb-gen = "0.3.0"
prost-build = "0.14.1"

[dependencies]
aes = "0.8.4"
# aes = { git = "https://github.com/RustCrypto/block-ciphers", package = "aes", tag = "aes-v0.9.0-rc.1" }
base64 = "0.22.1"
bytes = "1.10.1"
ccm = { version = "0.5.0", default-features = false, features = ["alloc"] }
chrono = { version = "0.4.42", optional = true }
ctr = "0.9.2"
futures = "0.3.31"
getifaddrs = { version = "0.5.0", optional = true }
prost = "0.14.1"
rand = "0.9.2"
rumqttc = { version = "0.25.0", optional = true }
serde = { version = "1.0.227", features = ["derive"] }
sha2 = "0.10.9"
socket2 = { version = "0.6.0", optional = true }
tokio = { version = "1.47.1", features = [
    "rt-multi-thread",
    "sync",
    "io-util",
    "io-std",
], optional = true }
tokio-serial = { version = "5.4.5", features = ["bytes"], optional = true }
tokio-stream = { version = "0.1.17", optional = true }
tokio-util = { version = "0.7.16", features = ["codec"], optional = true }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
zerocopy = { version = "0.8.27", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.3", features = ["wasm_js"] }

[dev-dependencies]
serde_yaml_ng = "0.10.0"
pretty_assertions = "1.3"
ron = "0.8"

[features]
display = ["dep:chrono"]
transport = [
    "dep:tokio",
    "dep:tokio-util",
    "dep:tokio-serial",
    "dep:tokio-stream",
    "dep:socket2",
    "dep:rumqttc",
    "dep:getifaddrs",
]
