[package]
name = "meshtastic-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
bytes = "1.10.1"
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["derive"] }
futures = "0.3.31"
meshtastic-connect = { path = "../" }
prost = "0.14.1"
rumqttc = "0.25.0"
serde = { version = "1.0.226", features = ["derive"] }
serde_yaml_ng = "0.10.0"
tokio = "1.47.1"
