[package]
name = "meshtastic-softnode"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
axum-server = "0.7.2"
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["derive"] }
duration-string = { version = "0.5.3", features = ["serde"] }
futures = "0.3.31"
libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }
meshtastic-connect = { path = "../" }
prost = "0.14.1"
rand = "0.9.2"
rusqlite = "0.37.0"
serde = { version = "1.0.227", features = ["derive"] }
serde_yaml_ng = "0.10.0"
tokio = "1.47.1"
tower-http = { version = "0.6.6", features = ["fs"] }
