[package]
name = "meshtastic-softnode"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
axum-server = "0.8.0"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
duration-string = { version = "0.5.3", features = ["serde"] }
futures = "0.3.31"
tokio-rusqlite = { version = "0.7.0", features = ["bundled"] }
meshtastic-connect = { path = "../", features = ["transport"] }
prost = "0.14.1"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml_ng = "0.10.0"
tokio = "1.47.2"
tower-http = { version = "0.6.8", features = [
    "fs",
    "trace",
    "cors",
    "compression-full",
] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
softnode-client = { path = "../softnode-client" }
rusqlite = { version = "*", features = ["bundled", "chrono", "vtab"] }
rustls-acme = { version = "0.14.1", features = ["axum"] }
