[package]
name = "softnode-client"
version = "0.1.0"
edition = "2024"

[dependencies]
meshtastic-connect = { path = ".." }
egui = "0.32"
eframe = { version = "0.32", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
    "x11",           # To support older Linux distributions (restores one of the default features)
] }
log = "0.4.28"

# You only need serde if you want app persistence:
serde = { version = "1.0.228", features = ["derive"] }
egui_plot = "0.33.0"
chrono = { version = "0.4.42", features = ["serde", "wasmbind"] }
ehttp = { version = "0.5.0", features = ["json"] }
prost = "0.14.1"
egui_extras = { version = "0.32.3", features = ["syntect"] }
serde_yaml_ng = "0.10.0"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"
# poll-promise = { version = "0.3.0", features = ["tokio"] }


# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.54"
web-sys = "0.3.81"              # to access the DOM (to hide the loading text)
# poll-promise = { version = "0.3.0", features = ["web"] }


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
