[package]
name = "softnode-client"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.33", default-features = false, features = [
  "default_fonts",  # Embed the default egui fonts.
  "accesskit",  # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
  "glow",  # Use the glow rendering backend. Alternative: "wgpu".
  "persistence",  # Enable restoring app state when restarting the app.
  "wayland",  # To support Linux (and CI)
  "x11",  # To support older Linux distributions (restores one of the default features)
] }
egui = "0.33"
log = "0.4.28"
meshtastic-connect = { path = ".." }

base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde", "wasmbind"] }
egui_extras = { version = "0.33", features = ["syntect"] }
egui_plot = "0.34"
ehttp = { version = "0.5.0", features = ["json", "streaming"] }
geo = "0.31.0"
prost = "0.14.1"
# You only need serde if you want app persistence:
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml_ng = "0.10.0"
walkers = { version = "0.47.0", features = ["serde"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.54"
wasmtimer = "0.4.3"
web-sys = "0.3.81"

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = "s"
strip = true
lto = "fat"
codegen-units = 1
